# serializer version: 1
# name: test_cury_switch_entity[switch.test_name_left_slot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_name_left_slot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Left slot',
    'platform': 'shelly',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cury_slot',
    'unique_id': '123456789ABC-cury:0-cury_left',
    'unit_of_measurement': None,
  })
# ---
# name: test_cury_switch_entity[switch.test_name_left_slot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test name Left slot',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_name_left_slot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_cury_switch_entity[switch.test_name_right_slot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_name_right_slot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Right slot',
    'platform': 'shelly',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cury_slot',
    'unique_id': '123456789ABC-cury:0-cury_right',
    'unit_of_measurement': None,
  })
# ---
# name: test_cury_switch_entity[switch.test_name_right_slot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test name Right slot',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_name_right_slot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
